@@ -14,6 +14,8 @@ ENHANCEMENTS
  * #241: empty passwords are now allowed for anonymous and other users.
  * #244: pysendfile is no longer a dependency if we're on Python >= 3.3 as
          os.sendfile() will be used instead.
+ * #247: on python 3.3 use time.monotonic() instead of time.time() so that the
+         scheduler won't break in case of system clock updates.
 
 BUG FIXES
 
